<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp"
    tools:context=".CrearTarea">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/crearTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:textColor="@color/dark_blue"
        android:text="@string/tituloCrearTarea"
        android:fontFamily="@font/raleway_medium"
        android:textStyle="bold"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/tituloTarea"
        android:drawableStart="@drawable/baseline_drive_file_rename_outline_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/crearTarea"
        android:layout_below="@id/crearTarea"
        android:fontFamily="@font/raleway_medium"
        android:ems="10"
        android:hint="@string/tituloTarea"
        android:inputType="text"
        android:autofillHints="" />

    <EditText
        android:id="@+id/responsableTarea"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="20dp"
        android:padding="20dp"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/crearTarea"
        android:layout_below="@id/tituloTarea"
        android:fontFamily="@font/raleway_medium"
        android:ems="10"
        android:hint="@string/responsableTarea"
        android:inputType="textPersonName"
        android:autofillHints="" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/descripcionTarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/responsableTarea"
        android:layout_alignStart="@id/crearTarea"
        android:layout_marginTop="30dp"
        android:hint="@string/descripcionTarea"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/detalleTarea"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:drawablePadding="20dp"
            android:ems="10"
            android:fontFamily="@font/raleway_medium"
            android:gravity="start"
            android:inputType="textMultiLine"
            android:lines="10"
            android:overScrollMode="always"
            android:padding="20dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:scrollHorizontally="false"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descripcionTarea"
        android:layout_alignStart="@id/tituloTarea"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="110dp"
        android:backgroundTint="@color/dark_blue"
        android:onClick="makeDescription"
        android:text="@string/botonCrear"
        android:fontFamily="@font/raleway_semibold"/>

</RelativeLayout>