<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/p_azul_cielo"
    tools:context=".Login">

    <ImageView
        android:id="@+id/image"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginTop="85dp"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/username"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_outline_24_white"
        android:drawablePadding="20dp"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/user"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/password"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/outline_password_24"
        android:drawablePadding="20dp"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/raleway_medium"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_blue" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/raleway_medium"
        android:onClick="login"
        android:text="@string/resgistrar"
        android:textColor="@color/white"
        app:backgroundTint="@color/dark_blue" />

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="1dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/visit"
        android:textColor="@color/white"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:id="@+id/socialicons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/socials"
            android:src="@drawable/facebook" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/socials"
            android:src="@drawable/gorjeo"
            tools:ignore="ImageContrastCheck" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/socials"
            android:src="@drawable/google" />
    </LinearLayout>


</RelativeLayout>