<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Login">

    <ImageView
        android:id="@+id/image"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="0dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/image"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="55sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/RegistroUser"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/raleway_semibold"
        android:gravity="center|start"
        android:text="Registro de usuario"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/Nombre"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/RegistroUser"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_outline_24_white"
        android:drawablePadding="20dp"
        android:fontFamily="@font/raleway_medium"
        android:hint="Nombre"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/Apellidos"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Nombre"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_outline_24_white"
        android:drawablePadding="20dp"
        android:fontFamily="@font/raleway_medium"
        android:hint="Apellidos"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/userReg"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Apellidos"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/baseline_person_outline_24_white"
        android:drawablePadding="20dp"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/user"
        android:inputType="text"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passReg"
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userReg"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#30ffffff"
        android:drawableStart="@drawable/outline_password_24"
        android:drawablePadding="20dp"
        android:fontFamily="@font/raleway_medium"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="TextContrastCheck"
        android:autofillHints="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passReg"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/resgistrar"
        android:textColor="@color/black"
        app:backgroundTint="@color/white" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Reg"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="35dp"
        android:fontFamily="@font/raleway_medium"
        android:text="Cancelar"
        android:textColor="@color/black"
        app:backgroundTint="@color/white" />



</RelativeLayout>